k8s/data-spark-worker-dpy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker-deployment
  labels:
    app: spark-worker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-worker-app
  template:
    metadata:
      labels:
        app: spark-worker-app
    spec:
      containers:
      - name: spark-master-ctnr
        image: local-data/spark-worker:spark-3.2.1
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: data-spark-volume
          mountPath: /data/spark-worker
      volumes:
      - name: data-spark-volume
        persistentVolumeClaim:
          claimName: data-spark-pvc
