k8s/data-spark-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master-svc
spec:
  type: ClusterIP
  selector:
    app: spark-master-app
  ports:
    - name: spark
      port: 81
      targetPort: 7077
    - name: webui
      port: 8080
      targetPort: 8088
